-fixed cart drawer alignment on mobile

--- a/assets/cooking-pal.css
+++ b/assets/cooking-pal.css
@@ -252,4 +252,12 @@ body.js-my-cart-open .cooking-pal-cart {
   cursor: pointer;
   font-weight: 700;
 }
+
+@media screen and (max-width: 480px) {
+  .cooking-pal-cart {
+    left: 0;
+    width: inherit;
+  }
+}
+
 /** END COOKING PAL CART **/
